# BEST_afterburner

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING  Readme.md  compile.sh  compile_with_iSS.sh  config.yaml  get_sample_hydro_surface.sh  smash_config.yaml
.github/workflow/: docker-publish.yml
.github/workflows/: docker-publish.yml
Docker/: Dockerfile
analysis/: compare_samplers.sh  config_samplers_comparison.yaml  get_spectra.sh
external_codes/: .gitignore  get_best_sampler.sh  get_iSS.sh  get_microcanonical_sampler.sh  get_msu_sampler.sh  get_smash.sh
src/: SamplerAndSmash.cc
src/include/: SamplerAndSmash.h
test/: surface_creator.py
